# contract-risk-mcp-foundry

./: .dockerignore  .env.example  .env.example.agents  .gitignore  AGENTS_DEPLOYMENT.md  Linked_In_Post.md  MARKET_SHOCK_INTEGRATION.md  README.md  Roadmap.md  TODO.md  deploy-new.ps1  deploy.ps1  deploy_old.ps1  example_foundry_agent_create.ipynb  project_create.md  project_description.md
apps/agent-orchestrator/: Dockerfile  pyproject.toml
apps/agent-orchestrator/src/: __init__.py  orchestrator.py
apps/mcp-contracts/: Dockerfile  pyproject.toml
apps/mcp-contracts/src/: __init__.py  main.py
apps/mcp-market/: Dockerfile  pyproject.toml
apps/mcp-market/src/: __init__.py  main.py
apps/mcp-risk/: Dockerfile  pyproject.toml
apps/mcp-risk/src/: __init__.py  main.py
apps/risk-worker/: Dockerfile  pyproject.toml
apps/risk-worker/src/: __init__.py  worker.py
infra/: main.bicep
infra/app/: main.bicep  mcp-container-app.bicep
infra/core/ai/: main.bicep
infra/core/ai/aifoundry/: ai-account.bicep  ai-models.bicep  ai-project.bicep  main.bicep
infra/core/ai/aisearch/: main.bicep  search-roles.bicep  search-service.bicep
infra/core/app/: app-service.bicep  main.bicep
infra/core/data/: main.bicep
infra/core/data/cosmosdb/: account.bicep  container.bicep  main.bicep
infra/core/data/mongodb/: main.bicep
infra/core/data/storage/: blob-storage-account.bicep  blob-storage-containers.bicep  blob-storage-roles.bicep  main.bicep  storageaccount-tables.bicep
infra/core/monitor/: applicationinsights.bicep  loganalytics.bicep  main.bicep
infra/core/platform/: aks.bicep  main.bicep
infra/core/platform/registry/: build-image.bicep  container-registry.bicep
infra/core/security/: keyvault.bicep  main.bicep  managed-identity.bicep  security-roles.bicep
k8s/: values.yaml
k8s/helm/: rabbitmq-values.yaml
k8s/helm/mcp-tools/: Chart.yaml  values.yaml
k8s/helm/mcp-tools/templates/: mcp-tools.yaml
k8s/helm/platform/: Chart.yaml  risk-operations-enhanced.json
k8s/helm/platform/templates/: platform.yaml
k8s/helm/risk-workers/: Chart.yaml  values.yaml
k8s/helm/risk-workers/templates/: risk-workers.yaml
k8s/rabbitmq/: Chart.yaml
notebooks/: 01_langchain_agent-mcp.ipynb  requirements.txt  utils.py
observability/grafana/dashboards/: risk-operations-enhanced.json  risk-operations.json
observability/otel/: collector-config.yaml
observability/prometheus/: prometheus.yaml
scripts/: Deploy-Containers.ps1  Deploy-FoundryAgents.ps1  Deploy-Infrastructure.ps1  Deploy-Kubernetes.ps1  README.md  bootstrap_cluster.sh  demo_eurusd_shock.py  deploy_foundry_agents.py  deploy_platform.sh  deploy_rabbitmq.sh  deploy_tools.sh  deploy_workers.sh  load_test_tools.py  manage_agents.py  requirements-agents.txt  seed_contracts.py  set_service_urls.ps1  simulate_market.py  test_agent_invocation.py  trigger_market_shock.py
scripts/common/: DeploymentFunctions.psm1
shared/contracts/: __init__.py  contract.py  job.py  result.py
