[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-contracts"
version = "0.1.0"
description = "MCP server for contract registry"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pydantic>=2.0",
]

[project.scripts]
mcp-contracts = "src.main:main"
