[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-market"
version = "0.1.0"
description = "MCP server for market data"
requires-python = ">=3.10"
dependencies = [
    "mcp==1.13.0",
    "pydantic>=2.0",
    "alpha_vantage==3.0.0",
    "pymongo>=4.6.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
mcp-market = "src.main:main"
