[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-risk"
version = "0.1.0"
description = "MCP server for risk job submission"
requires-python = ">=3.10"
dependencies = [
    "mcp==1.13.0",
    "pydantic>=2.0",
    "aio-pika>=9.0",
    "prometheus-client>=0.19.0",
    "pymongo>=4.0",
]

[project.scripts]
mcp-risk = "src.main:main"
