[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-worker"
version = "0.1.0"
description = "Risk calculation worker"
requires-python = ">=3.10"
dependencies = [
    "aio-pika>=9.0",
    "numpy>=1.24",
    "pydantic>=2.0",
]

[project.scripts]
risk-worker = "src.worker:main"
